--- a/style.css
+++ b/style.css
@@ -1,15 +1,36 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: darkcyan;
+    color: white;
+    text-align: center;
 }
 
 div {
     margin: 30px;
     box-sizing: border-box;
-
 }
 
-.container {
-    display: flex;
-    justify-content: center, space-around;
+input[type=text] {
+    width: 30%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+button {
+    border: 2px solid #e7e7e7;
+    border-radius: 8px;
+  background-color: white;
+  color: black;
+  padding: 8px 14px;
+  font-size: 1em;
+  margin: 8px 0;
+  cursor: pointer;
+  width: 10%;
 }
+
+button:hover {
+    background: #e7e7e7;
+  }
